I must learn Ubuntu at some point

--- a/.github/workflows/store_number.yml
+++ b/.github/workflows/store_number.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Install jq
-      run: sudo (apt update && apt install jq)
+      run: sudo apt-get update && sudo apt-get install jq
     - name: Echo number
       run: echo ${{ inputs.a_number }}
     - name: Show file
