--- a/.github/workflows/store_number.yml
+++ b/.github/workflows/store_number.yml
@@ -12,6 +12,8 @@ jobs:
   store_number:
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout the code
+      uses: actions/checkout@v3
     - name: Install jq
       run: sudo apt-get update && sudo apt-get install jq
     - name: Echo number
