--- a/.github/workflows/store_number.yml
+++ b/.github/workflows/store_number.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Add the data
       run: |
         DATE=`date`
-        jq --arg DATE "$DATE" '.data += [{ "number" : "2", "date" : $DATE }]' newdata.json
+        jq --arg DATE "$DATE" '.data += [{ "number" : "2", "date" : $DATE }]' data.json > newdata.json
         mv newdata.json data.json
     - name: Show file again
       run: jq . data.json
