--- a/.github/workflows/count_rows.yml
+++ b/.github/workflows/count_rows.yml
@@ -11,7 +11,7 @@ jobs:
       uses: actions/checkout@v3
     - name: Count rows
       run: |
-        echo "ROWS=`wc -l test.csv`" >> $GITHUB_ENV
+        echo "ROWS=`wc -l test.csv | cut -d' ' -f1`" >> $GITHUB_ENV
     - name: Show count
       run: |
         echo $ROWS
