--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,5 +7,5 @@ jobs:
   test:
     uses: PerlToolsTeam/github_workflows/.github/workflows/cpan-test-new.yml@main
     with:
-      test_contexts: "[ 'foo' ]"
+      testing_contexts: "[ 'foo' ]"
 
