--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
   test:
     uses: PerlToolsTeam/github_workflows/.github/workflows/cpan-test-new.yml@main
     with:
-      os: "[ 'ubuntu' ]"
+      os: "[ 'ubuntu-latest' ]"
       perl_version: "[ 'latest' ]"
       testing_contexts: "[ 'foo' ]"
 
